Process & Add data to db

--- a/pdf-reader/convert_df.ipynb
+++ b/pdf-reader/convert_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,20 +39,20 @@
        "      <th>Name</th>\n",
        "      <th>Code</th>\n",
        "      <th>Physique 1</th>\n",
-       "      <th>Moyenne</th>\n",
-       "      <th>Credit</th>\n",
+       "      <th>Moyenne_1</th>\n",
+       "      <th>Credit_1</th>\n",
        "      <th>Algebre 1</th>\n",
        "      <th>Analyse 1</th>\n",
-       "      <th>Moyenne.1</th>\n",
-       "      <th>Credit.1</th>\n",
+       "      <th>Moyenne_2</th>\n",
+       "      <th>Credit_2</th>\n",
        "      <th>Algorithmique et Structure de Donné 1</th>\n",
        "      <th>Structure Machine 1</th>\n",
-       "      <th>Moyenne.2</th>\n",
-       "      <th>Credit.2</th>\n",
+       "      <th>Moyenne_3</th>\n",
+       "      <th>Credit_3</th>\n",
        "      <th>Langue Etranger 1</th>\n",
        "      <th>Expression Scientifique Terminologie</th>\n",
-       "      <th>Moyenne.3</th>\n",
-       "      <th>Credit.3</th>\n",
+       "      <th>Moyenne_4</th>\n",
+       "      <th>Credit_4</th>\n",
        "      <th>Semestre Credit</th>\n",
        "      <th>Moyenne Semestre</th>\n",
        "    </tr>\n",
@@ -173,35 +173,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Name          Code  Physique 1  Moyenne  Credit  \\\n",
-       "0      1 - ABBOU AHMED WALID  232331713420        11.0     11.0       4   \n",
-       "1      2 - ABDOUNI ROUMAISSA  242431414303        13.5     13.5       4   \n",
-       "2             3 - ABID FARES  242431424008        10.3     10.3       4   \n",
-       "3  4 - ACHOUR RAZANE OUMAIMA  232331594515         7.9      7.9       0   \n",
-       "4   5 - AHMED CHEKKAT DOUNIA  242431776907        15.5     15.5       4   \n",
+       "                        Name          Code  Physique 1  Moyenne_1  Credit_1  \\\n",
+       "0      1 - ABBOU AHMED WALID  232331713420        11.0       11.0         4   \n",
+       "1      2 - ABDOUNI ROUMAISSA  242431414303        13.5       13.5         4   \n",
+       "2             3 - ABID FARES  242431424008        10.3       10.3         4   \n",
+       "3  4 - ACHOUR RAZANE OUMAIMA  232331594515         7.9        7.9         0   \n",
+       "4   5 - AHMED CHEKKAT DOUNIA  242431776907        15.5       15.5         4   \n",
        "\n",
-       "   Algebre 1  Analyse 1  Moyenne.1  Credit.1  \\\n",
+       "   Algebre 1  Analyse 1  Moyenne_2  Credit_2  \\\n",
        "0       12.0       8.50      10.00        11   \n",
        "1       11.0       8.90       9.80         5   \n",
        "2        6.0       5.90       5.94         0   \n",
        "3        9.0       6.95       7.83         0   \n",
        "4        7.0       6.00       6.43         0   \n",
        "\n",
-       "   Algorithmique et Structure de Donné 1  Structure Machine 1  Moyenne.2  \\\n",
+       "   Algorithmique et Structure de Donné 1  Structure Machine 1  Moyenne_3  \\\n",
        "0                                  10.90                15.95      13.06   \n",
        "1                                  10.00                11.25      10.54   \n",
        "2                                   1.65                 3.00       2.23   \n",
        "3                                   6.80                 1.70       4.61   \n",
        "4                                   5.70                16.65      10.39   \n",
        "\n",
-       "   Credit.2  Langue Etranger 1  Expression Scientifique Terminologie  \\\n",
+       "   Credit_3  Langue Etranger 1  Expression Scientifique Terminologie  \\\n",
        "0        11               11.8                                  12.5   \n",
        "1        11                0.0                                   0.0   \n",
        "2         0                0.0                                   0.0   \n",
        "3         0               13.5                                  13.5   \n",
        "4        11                0.0                                   0.0   \n",
        "\n",
-       "   Moyenne.3  Credit.3  Semestre Credit  Moyenne Semestre  \n",
+       "   Moyenne_4  Credit_4  Semestre Credit  Moyenne Semestre  \n",
        "0      12.15         4               30             11.54  \n",
        "1       0.00         0               20              9.41  \n",
        "2       0.00         0                4              4.32  \n",
@@ -209,7 +209,7 @@
        "4       0.00         0               15              8.26  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,20 +267,20 @@
        "      <th>Name</th>\n",
        "      <th>Code</th>\n",
        "      <th>Physique 1</th>\n",
-       "      <th>Moyenne</th>\n",
-       "      <th>Credit</th>\n",
+       "      <th>Moyenne_1</th>\n",
+       "      <th>Credit_1</th>\n",
        "      <th>Algebre 1</th>\n",
        "      <th>Analyse 1</th>\n",
-       "      <th>Moyenne.1</th>\n",
-       "      <th>Credit.1</th>\n",
+       "      <th>Moyenne_2</th>\n",
+       "      <th>Credit_2</th>\n",
        "      <th>Algorithmique et Structure de Donné 1</th>\n",
        "      <th>Structure Machine 1</th>\n",
-       "      <th>Moyenne.2</th>\n",
-       "      <th>Credit.2</th>\n",
+       "      <th>Moyenne_3</th>\n",
+       "      <th>Credit_3</th>\n",
        "      <th>Langue Etranger 1</th>\n",
        "      <th>Expression Scientifique Terminologie</th>\n",
-       "      <th>Moyenne.3</th>\n",
-       "      <th>Credit.3</th>\n",
+       "      <th>Moyenne_4</th>\n",
+       "      <th>Credit_4</th>\n",
        "      <th>Semestre Credit</th>\n",
        "      <th>Moyenne Semestre</th>\n",
        "      <th>Section</th>\n",
@@ -407,35 +407,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Name          Code  Physique 1  Moyenne  Credit  \\\n",
-       "0      ABBOU AHMED WALID  232331713420        11.0     11.0       4   \n",
-       "1      ABDOUNI ROUMAISSA  242431414303        13.5     13.5       4   \n",
-       "2             ABID FARES  242431424008        10.3     10.3       4   \n",
-       "3  ACHOUR RAZANE OUMAIMA  232331594515         7.9      7.9       0   \n",
-       "4   AHMED CHEKKAT DOUNIA  242431776907        15.5     15.5       4   \n",
+       "                    Name          Code  Physique 1  Moyenne_1  Credit_1  \\\n",
+       "0      ABBOU AHMED WALID  232331713420        11.0       11.0         4   \n",
+       "1      ABDOUNI ROUMAISSA  242431414303        13.5       13.5         4   \n",
+       "2             ABID FARES  242431424008        10.3       10.3         4   \n",
+       "3  ACHOUR RAZANE OUMAIMA  232331594515         7.9        7.9         0   \n",
+       "4   AHMED CHEKKAT DOUNIA  242431776907        15.5       15.5         4   \n",
        "\n",
-       "   Algebre 1  Analyse 1  Moyenne.1  Credit.1  \\\n",
+       "   Algebre 1  Analyse 1  Moyenne_2  Credit_2  \\\n",
        "0       12.0       8.50      10.00        11   \n",
        "1       11.0       8.90       9.80         5   \n",
        "2        6.0       5.90       5.94         0   \n",
        "3        9.0       6.95       7.83         0   \n",
        "4        7.0       6.00       6.43         0   \n",
        "\n",
-       "   Algorithmique et Structure de Donné 1  Structure Machine 1  Moyenne.2  \\\n",
+       "   Algorithmique et Structure de Donné 1  Structure Machine 1  Moyenne_3  \\\n",
        "0                                  10.90                15.95      13.06   \n",
        "1                                  10.00                11.25      10.54   \n",
        "2                                   1.65                 3.00       2.23   \n",
        "3                                   6.80                 1.70       4.61   \n",
        "4                                   5.70                16.65      10.39   \n",
        "\n",
-       "   Credit.2  Langue Etranger 1  Expression Scientifique Terminologie  \\\n",
+       "   Credit_3  Langue Etranger 1  Expression Scientifique Terminologie  \\\n",
        "0        11               11.8                                  12.5   \n",
        "1        11                0.0                                   0.0   \n",
        "2         0                0.0                                   0.0   \n",
        "3         0               13.5                                  13.5   \n",
        "4        11                0.0                                   0.0   \n",
        "\n",
-       "   Moyenne.3  Credit.3  Semestre Credit  Moyenne Semestre  Section  \n",
+       "   Moyenne_4  Credit_4  Semestre Credit  Moyenne Semestre  Section  \n",
        "0      12.15         4               30             11.54      1.0  \n",
        "1       0.00         0               20              9.41      1.0  \n",
        "2       0.00         0                4              4.32      1.0  \n",
@@ -443,7 +443,7 @@
        "4       0.00         0               15              8.26      1.0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,6 +461,44 @@
     "df[\"Name\"] = df[\"Name\"].apply(transform_name)\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_dict = {\n",
+    "    'Name': 'name',\n",
+    "    'Code': 'code',\n",
+    "    'Physique 1': 'phy1',\n",
+    "    'Moyenne_1': 'moyenne_a',\n",
+    "    'Credit_1': 'credit_a',\n",
+    "    'Algebre 1': 'algebre1',\n",
+    "    'Analyse 1': 'analyse1',\n",
+    "    'Moyenne_2': 'moyenne_b',\n",
+    "    'Credit_2': 'credit_b',\n",
+    "    'Algorithmique et Structure de Donné 1': 'asd1',\n",
+    "    'Structure Machine 1': 'sm1',\n",
+    "    'Moyenne_3': 'moyenne_c',\n",
+    "    'Credit_3': 'credit_c',\n",
+    "    'Langue Etranger 1': 'le1',\n",
+    "    'Expression Scientifique Terminologie': 'est',\n",
+    "    'Moyenne_4': 'moyenne_d',\n",
+    "    'Credit_4': 'credit_d',\n",
+    "    'Semestre Credit': 'semestre_credit',\n",
+    "    'Moyenne Semestre': 'moyenne_semestre'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"deliberation_postprocess.csv\", index=False)"
    ]
   }
  ],
@@ -480,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
