--- a/pdf-reader/convert_pdf.ipynb
+++ b/pdf-reader/convert_pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -24,11 +24,18 @@
     }
    ],
    "source": [
-    "all_data = [[\"Name\", \"Code\", \"Physique 1\", \"Moyenne\", \"Credit\", \"Algebre 1\", \"Analyse 1\", \"Moyenne\", \"Credit\", \"Algorithmique et Structure de Donné 1\", \"Structure Machine 1\", \"Moyenne\", \"Credit\", \"Langue Etranger 1\", \"Expression Scientifique Terminologie\", \"Moyenne\", \"Credit\", \"Semestre Credit\", \"Moyenne Semestre\"]]\n",
+    "all_data = [[\"Name\", \"Code\", \"Physique 1\", \"Moyenne_1\", \"Credit_1\", \"Algebre 1\", \"Analyse 1\", \"Moyenne_2\", \"Credit_2\", \"Algorithmique et Structure de Donné 1\", \"Structure Machine 1\", \"Moyenne_3\", \"Credit_3\", \"Langue Etranger 1\", \"Expression Scientifique Terminologie\", \"Moyenne_4\", \"Credit_4\", \"Semestre Credit\", \"Moyenne Semestre\"]]\n",
     "\n",
+    "first_line = []\n",
+    "second_line = []\n",
+    "i = 0\n",
     "with pdfplumber.open(\"deliberation.pdf\") as pdf:\n",
     "    for page_num, page in enumerate(pdf.pages, start=1):\n",
     "        table = page.extract_table()\n",
+    "        if i == 0:\n",
+    "            first_line += table[0]\n",
+    "            second_line += table[1]\n",
+    "            i += 1\n",
     "        if table:\n",
     "            table = table[2:]\n",
     "            all_data.extend(table)\n",
@@ -37,7 +44,7 @@
     "df = pd.DataFrame(all_data)\n",
     "df.to_csv(\"students_data.csv\", index=False, quoting=1, sep=\",\", header=False)\n",
     "\n",
-    "print(f\"✅ Extracted {len(df)} rows successfully!\")"
+    "print(f\"✅ Extracted {len(df)} rows successfully!\")\n"
    ]
   },
   {
@@ -64,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
