Change structure & Handle arabic names

--- a/pdf-reader/scripts/convert_pdf.ipynb
+++ b/pdf-reader/scripts/convert_pdf.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pdfplumber\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import arabic_reshaper\n",
+    "from bidi.algorithm import get_display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,23 +28,25 @@
    "source": [
     "all_data = [[\"Name\", \"Code\", \"Physique 1\", \"Moyenne_1\", \"Credit_1\", \"Algebre 1\", \"Analyse 1\", \"Moyenne_2\", \"Credit_2\", \"Algorithmique et Structure de Donné 1\", \"Structure Machine 1\", \"Moyenne_3\", \"Credit_3\", \"Langue Etranger 1\", \"Expression Scientifique Terminologie\", \"Moyenne_4\", \"Credit_4\", \"Semestre Credit\", \"Moyenne Semestre\"]]\n",
     "\n",
-    "first_line = []\n",
-    "second_line = []\n",
     "i = 0\n",
-    "with pdfplumber.open(\"deliberation.pdf\") as pdf:\n",
+    "\n",
+    "def reshape_arabic(text):\n",
+    "    try:\n",
+    "        return get_display(arabic_reshaper.reshape(text)) if text else text\n",
+    "    except Exception:\n",
+    "        return text \n",
+    "\n",
+    "with pdfplumber.open(\"../data/deliberation.pdf\") as pdf:\n",
     "    for page_num, page in enumerate(pdf.pages, start=1):\n",
     "        table = page.extract_table()\n",
-    "        if i == 0:\n",
-    "            first_line += table[0]\n",
-    "            second_line += table[1]\n",
-    "            i += 1\n",
     "        if table:\n",
     "            table = table[2:]\n",
-    "            all_data.extend(table)\n",
+    "            reshaped_table = [[reshape_arabic(cell) for cell in row] for row in table]\n",
+    "            all_data.extend(reshaped_table)\n",
     "\n",
     "\n",
     "df = pd.DataFrame(all_data)\n",
-    "df.to_csv(\"students_data.csv\", index=False, quoting=1, sep=\",\", header=False)\n",
+    "df.to_csv(\"../data/students_data.csv\", index=False, quoting=1, sep=\",\", header=False)\n",
     "\n",
     "print(f\"✅ Extracted {len(df)} rows successfully!\")\n"
    ]
