--- a/pdf-reader/scripts/push_supabase.ipynb
+++ b/pdf-reader/scripts/push_supabase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# getting the student data from csv file\n",
-    "data = pd.read_csv(\"deliberation_postprocess.csv\")\n",
+    "data = pd.read_csv(\"../data/deliberation_postprocess.csv\")\n",
     "\n",
     "# matching column names\n",
     "match_dict = {\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,8 @@
     "    response = client.table(\"analysis_student_grades_usthb\").insert(row).execute()\n",
     "    if i % 100 == 0:\n",
     "        print(f\"Inserted {i} rows successfully\")\n",
-    "    i += 1"
+    "    i += 1\n",
+    "print(f\"{i} Rows inserted successfully\")"
    ]
   },
   {
