--- a/pdf-reader/scripts/convert_df.ipynb
+++ b/pdf-reader/scripts/convert_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,24 +209,25 @@
        "4       0.00         0               15              8.26  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"students_data.csv\")\n",
+    "df = pd.read_csv(\"../data/students_data.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# adding section column\n",
     "i = 0\n",
+    "\n",
     "def extract_number(text):\n",
     "    match = re.search(r'[\\d\\u0660-\\u0669]+', text)\n",
     "    return int(match.group()) if match else None\n",
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -443,29 +444,26 @@
        "4       0.00         0               15              8.26      1.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cutting the name and removing \\n and replacing with \" \"\n",
-    "def transform_name(name):\n",
-    "  name = \" \".join(name.split(\" \")[2:])\n",
-    "  return name\n",
+    "# cutting the name\n",
+    "def extract_name(text):\n",
+    "    if text:\n",
+    "        text = re.sub(r'^\\d+\\s*-\\s*', '', text.strip())\n",
+    "    return text\n",
     "\n",
-    "def remove_newline(name):\n",
-    "  name = name.replace(\"\\n\", \" \")\n",
-    "  return name\n",
-    "\n",
-    "df[\"Name\"] = df[\"Name\"].apply(transform_name)\n",
+    "df[\"Name\"] = df[\"Name\"].apply(extract_name)\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,12 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"deliberation_postprocess.csv\", index=False)"
+    "df.to_csv(\"../data/deliberation_postprocess.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
