Add llm parsing for column names

--- a/pdf-reader/scripts/convert_df.ipynb
+++ b/pdf-reader/scripts/convert_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -38,184 +38,198 @@
        "      <th></th>\n",
        "      <th>Name</th>\n",
        "      <th>Code</th>\n",
-       "      <th>Physique 1</th>\n",
-       "      <th>Moyenne_1</th>\n",
-       "      <th>Credit_1</th>\n",
-       "      <th>Algebre 1</th>\n",
-       "      <th>Analyse 1</th>\n",
-       "      <th>Moyenne_2</th>\n",
-       "      <th>Credit_2</th>\n",
-       "      <th>Algorithmique et Structure de Donné 1</th>\n",
-       "      <th>Structure Machine 1</th>\n",
-       "      <th>Moyenne_3</th>\n",
-       "      <th>Credit_3</th>\n",
-       "      <th>Langue Etranger 1</th>\n",
-       "      <th>Expression Scientifique Terminologie</th>\n",
-       "      <th>Moyenne_4</th>\n",
-       "      <th>Credit_4</th>\n",
-       "      <th>Semestre Credit</th>\n",
-       "      <th>Moyenne Semestre</th>\n",
+       "      <th>Systèmes d’information</th>\n",
+       "      <th>Théorie des graphes</th>\n",
+       "      <th>Moyenne UE 1</th>\n",
+       "      <th>Crédit UE 1</th>\n",
+       "      <th>Algorithmique et Structures de Données (ASD)</th>\n",
+       "      <th>Architecture des Ordinateurs (AO)</th>\n",
+       "      <th>Moyenne UE 2</th>\n",
+       "      <th>Crédit UE 2</th>\n",
+       "      <th>Mathématique Logique</th>\n",
+       "      <th>Méthodes Numériques</th>\n",
+       "      <th>Moyenne UE 3</th>\n",
+       "      <th>Crédit UE 3</th>\n",
+       "      <th>Langue 2 Étrangère</th>\n",
+       "      <th>Moyenne UE 4</th>\n",
+       "      <th>Crédit UE 4</th>\n",
+       "      <th>Crédits du Semestre</th>\n",
+       "      <th>Moyenne du Semestre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1 - ABBOU AHMED WALID</td>\n",
-       "      <td>232331713420</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>1 - ABDAOUI AYA</td>\n",
+       "      <td>212136023497</td>\n",
+       "      <td>13.30</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>10.46</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>8.42</td>\n",
+       "      <td>7.49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.10</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>9.10</td>\n",
        "      <td>4</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>11</td>\n",
-       "      <td>10.90</td>\n",
-       "      <td>15.95</td>\n",
-       "      <td>13.06</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>12.15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>11.54</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2 - ABDOUNI ROUMAISSA</td>\n",
-       "      <td>242431414303</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>8.90</td>\n",
-       "      <td>9.80</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>11.25</td>\n",
-       "      <td>10.54</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>2 - ABDESMED CHOUROUK</td>\n",
+       "      <td>232336177720</td>\n",
+       "      <td>13.90</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>11.84</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>6.44</td>\n",
        "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>9.41</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.40</td>\n",
+       "      <td>11.68</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3 - ABID FARES</td>\n",
-       "      <td>242431424008</td>\n",
-       "      <td>10.3</td>\n",
-       "      <td>10.3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5.90</td>\n",
-       "      <td>5.94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3 - ABDI SAMY ZAKARIA</td>\n",
+       "      <td>222236128502</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4 - ACHOUR RAZANE OUMAIMA</td>\n",
-       "      <td>232331594515</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>7.9</td>\n",
+       "      <td>4 - ABDOUN CELIA NOOR</td>\n",
+       "      <td>232336124105</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>5.42</td>\n",
        "      <td>0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.95</td>\n",
-       "      <td>7.83</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>5.40</td>\n",
        "      <td>0</td>\n",
-       "      <td>6.80</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>4.61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>13.50</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7.22</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5 - AHMED CHEKKAT DOUNIA</td>\n",
-       "      <td>242431776907</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>6.43</td>\n",
+       "      <td>5 - ABIDI LYNA</td>\n",
+       "      <td>232336204903</td>\n",
+       "      <td>14.15</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>11.13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>8.10</td>\n",
+       "      <td>5.78</td>\n",
        "      <td>0</td>\n",
-       "      <td>5.70</td>\n",
-       "      <td>16.65</td>\n",
-       "      <td>10.39</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>8.26</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>10.06</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9.04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Name          Code  Physique 1  Moyenne_1  Credit_1  \\\n",
-       "0      1 - ABBOU AHMED WALID  232331713420        11.0       11.0         4   \n",
-       "1      2 - ABDOUNI ROUMAISSA  242431414303        13.5       13.5         4   \n",
-       "2             3 - ABID FARES  242431424008        10.3       10.3         4   \n",
-       "3  4 - ACHOUR RAZANE OUMAIMA  232331594515         7.9        7.9         0   \n",
-       "4   5 - AHMED CHEKKAT DOUNIA  242431776907        15.5       15.5         4   \n",
+       "                    Name          Code  Systèmes d’information  \\\n",
+       "0        1 - ABDAOUI AYA  212136023497                   13.30   \n",
+       "1  2 - ABDESMED CHOUROUK  232336177720                   13.90   \n",
+       "2  3 - ABDI SAMY ZAKARIA  222236128502                    0.00   \n",
+       "3  4 - ABDOUN CELIA NOOR  232336124105                   12.20   \n",
+       "4         5 - ABIDI LYNA  232336204903                   14.15   \n",
        "\n",
-       "   Algebre 1  Analyse 1  Moyenne_2  Credit_2  \\\n",
-       "0       12.0       8.50      10.00        11   \n",
-       "1       11.0       8.90       9.80         5   \n",
-       "2        6.0       5.90       5.94         0   \n",
-       "3        9.0       6.95       7.83         0   \n",
-       "4        7.0       6.00       6.43         0   \n",
+       "   Théorie des graphes  Moyenne UE 1  Crédit UE 1  \\\n",
+       "0                 6.20         10.46            9   \n",
+       "1                 8.75         11.84            9   \n",
+       "2                 0.00          0.00            0   \n",
+       "3                 4.07          8.95            5   \n",
+       "4                 6.60         11.13            9   \n",
        "\n",
-       "   Algorithmique et Structure de Donné 1  Structure Machine 1  Moyenne_3  \\\n",
-       "0                                  10.90                15.95      13.06   \n",
-       "1                                  10.00                11.25      10.54   \n",
-       "2                                   1.65                 3.00       2.23   \n",
-       "3                                   6.80                 1.70       4.61   \n",
-       "4                                   5.70                16.65      10.39   \n",
+       "   Algorithmique et Structures de Données (ASD)  \\\n",
+       "0                                          6.55   \n",
+       "1                                          4.38   \n",
+       "2                                          0.00   \n",
+       "3                                          3.34   \n",
+       "4                                          3.45   \n",
        "\n",
-       "   Credit_3  Langue Etranger 1  Expression Scientifique Terminologie  \\\n",
-       "0        11               11.8                                  12.5   \n",
-       "1        11                0.0                                   0.0   \n",
-       "2         0                0.0                                   0.0   \n",
-       "3         0               13.5                                  13.5   \n",
-       "4        11                0.0                                   0.0   \n",
+       "   Architecture des Ordinateurs (AO)  Moyenne UE 2  Crédit UE 2  \\\n",
+       "0                               8.42          7.49            0   \n",
+       "1                               8.50          6.44            0   \n",
+       "2                               0.00          0.00            0   \n",
+       "3                               7.50          5.42            0   \n",
+       "4                               8.10          5.78            0   \n",
        "\n",
-       "   Moyenne_4  Credit_4  Semestre Credit  Moyenne Semestre  \n",
-       "0      12.15         4               30             11.54  \n",
-       "1       0.00         0               20              9.41  \n",
-       "2       0.00         0                4              4.32  \n",
-       "3      13.50         4                4              7.22  \n",
-       "4       0.00         0               15              8.26  "
+       "   Mathématique Logique  Méthodes Numériques  Moyenne UE 3  Crédit UE 3  \\\n",
+       "0                 10.10                 8.10          9.10            4   \n",
+       "1                 11.95                11.40         11.68            8   \n",
+       "2                  0.00                 0.00          0.00            0   \n",
+       "3                  6.60                 4.20          5.40            0   \n",
+       "4                 12.00                 8.12         10.06            8   \n",
+       "\n",
+       "   Langue 2 Étrangère  Moyenne UE 4  Crédit UE 4  Crédits du Semestre  \\\n",
+       "0                10.0          10.0            2                   15   \n",
+       "1                14.0          14.0            2                   19   \n",
+       "2                 0.0           0.0            0                    0   \n",
+       "3                16.0          16.0            2                    7   \n",
+       "4                14.0          14.0            2                   19   \n",
+       "\n",
+       "   Moyenne du Semestre  \n",
+       "0                 8.98  \n",
+       "1                 9.91  \n",
+       "2                 0.00  \n",
+       "3                 7.18  \n",
+       "4                 9.04  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/students_data.csv\")\n",
+    "df = pd.read_csv(\"../data/Deliberation_2024_2025_L2_S3.csv\")\n",
     "df.head()"
    ]
   },
